--- a/wercker.yml
+++ b/wercker.yml
@@ -42,6 +42,11 @@ build:
         code: |
           ineffassign $(glide novendor -x)
     - script:
+        name: staticcheck
+        cwd: $GOPATH/src/github.com/pacificporter/surf
+        code: |
+          staticcheck $(glide novendor -x)
+    - script:
         name: go test
         cwd: $GOPATH/src/github.com/pacificporter/surf
         code: |
