--- a/wercker.yml
+++ b/wercker.yml
@@ -35,7 +35,7 @@ build:
         name: nilerr
         cwd: $WERCKER_SOURCE_DIR
         code: |
-          nilerr .
+          nilerr ./...
     - script:
         name: go test
         cwd: $WERCKER_SOURCE_DIR
