--- a/wercker.yml
+++ b/wercker.yml
@@ -1,5 +1,5 @@
 box:
-  id: pacificporter/golang:1.15.6-12.16.3
+  id: pacificporter/golang:1.16.4-14.15.4-2
   username: $DOCKER_HUB_USERNAME
   password: $DOCKER_HUB_PASSWORD
 build:
