--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,12 @@
 name: CI
 
 on:
-  pull_request:
-    types: [opened, synchronize]
-  workflow_dispatch:
-
-env:
-  TZ: "Asia/Tokyo"
+  push:
+    branches:
+      - 'feature/wip-ci-with-github-actions'
 
 jobs:
   go-build-and-test:
-    runs-on: ubuntu-20.04
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          check-latest: true
-          go-version-file: go.mod
-
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-          key: ${{ runner.os }}-cache-go-build-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-cache-go-build-
-
-      - name: Go build
-        run: go build ./...
-
-      - name: Go Vet
-        run: go vet ./...
-
-      - name: Go test
-        env:
-          ENVIRONMENT: test
-        run: go test -p=1 ./...
+    uses: pacificporter/github-actions/.github/workflows/go.yml@main
+    with:
+      tz: "Asia/Tokyo"
