dependabotでのgoモジュールの更新でバージョンを上げない

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
         update-types:
           - minor
           - patch
+    labels:
+      - dependencies
+      - go
+      - no-bump-version
     schedule:
       interval: weekly
     reviewers:
