--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,37 +1,58 @@
-run:
-  # which dirs to skip: issues from them won't be reported;
-  # can use regexp here: generated.*, regexp is applied on full path;
-  # default value is empty list, but default dirs are skipped independently
-  # from this option's value (see skip-dirs-use-default).
-  # "/" will be replaced by current OS file path separator to properly work
-  # on Windows.
-  skip-dirs:
-  # timeout for analysis, e.g. 30s, 5m, default is 1m
-  timeout: 5m
-
+version: "2"
 linters:
-  presets:
-    - bugs
-    - unused
   enable:
+    - asasalint
+    - bidichk
+    - bodyclose
+    - contextcheck
+    - durationcheck
+    - errchkjson
+    - errorlint
+    - gocheckcompilerdirectives
+    - gochecksumtype
     - gocyclo
+    - gosmopolitan
+    - loggercheck
+    - makezero
+    - musttag
+    - nilerr
+    - nilnesserr
+    - protogetter
+    - reassign
+    - recvcheck
+    - spancheck
+    - testifylint
+    - zerologlint
   disable:
-    - maligned
-    - prealloc
-    - exhaustive
-    - noctx
     - asciicheck
-    - sqlclosecheck
-    - rowserrcheck
+    - exhaustive
     - gosec
-    - unparam # これはいれてもいいかも
-    - scopelint
-
-# all available settings of specific linters
-linters-settings:
-  gocyclo:
-    # minimal code complexity to report, 30 by default (but we recommend 10-20)
-    min-complexity: 25
-
-  errcheck:
-    ignore: fmt:.*,^Close|^Write|^Shutdown
+    - noctx
+    - prealloc
+    - rowserrcheck
+    - sqlclosecheck
+    - unparam
+  settings:
+    errcheck:
+      exclude-functions:
+        - fmt:.*,^Close|^Write|^Shutdown
+    gocyclo:
+      min-complexity: 25
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
